--- a/resources/style.css
+++ b/resources/style.css
@@ -234,6 +234,23 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+   
+   /* 
+.stack{
+   max-width:1100px;
+   background-color: pink ;
+   display:inline-block;
+
+}
+
+.stack-cell{
+
+   width:700px;
+   width:700px;
+   background-color: yellow ;
+   text-align: center;
+}
+
 
 .ontopText{
    position: absolute;
@@ -244,7 +261,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
    z-index:100;
 }
 
-/* My ADDS */
 .video-div{
    width:100%;
    -webkit-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
@@ -269,4 +285,4 @@ box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
 
 a{
    display:flex;
-}
+} */
