--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,5 @@
 ﻿
 
-
 /* W3.CSS 4.12 November 2018 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
@@ -235,54 +234,52 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
    
-   /* 
-.stack{
-   max-width:1100px;
-   background-color: pink ;
+body{
+   /* background-color: purple; */
+
+}
+
+.top-bar{
+   position: fixed;
+   width: 100%;
+   height: 30px;
+   margin:  auto; /* Will not center vertically and won't work in IE6/7. */
+   left: 0;
+   right: 0;
+   z-index: 3;
+   background-color: white ;
+}
+
+.top-menu-container{
+   margin:auto; 
+   width: 100%;
+   height: 100%;
+
+     /* display:flex;
+     flex-flow: row nowrap;
+   background-color: inherit;
+   justify-content: center; */
+}
+
+.button_{
+
+   width:10%;
+   height:20px;
+   margin:auto; 
+   padding: 0px 5%;
+
+   border:none;
    display:inline-block;
-
+   vertical-align:middle;
+   overflow:hidden;
+   text-decoration:none;
+   color:inherit;
+   background-color:inherit;
+   text-align:center;
+   cursor:pointer;
+   white-space:nowrap;
+   
 }
 
-.stack-cell{
 
-   width:700px;
-   width:700px;
-   background-color: yellow ;
-   text-align: center;
-}
-
-
-.ontopText{
-   position: absolute;
-   width:100%;
-   height:100%;
-   margin:auto;
-   text-align: center;
-   z-index:100;
-}
-
-.video-div{
-   width:100%;
-   -webkit-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
--moz-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
-}
-
-video{
-   -webkit-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
--moz-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
-box-shadow: inset 0px 0px 48px 48px rgba(255,255,255,1);
-}
-
-.middle-bar{
-   margin:auto;
-}
-
-.centered-flex{
-   display: flex;
-   justify-content: center;
-}
-
-a{
-   display:flex;
-} */
+.button_:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
