--- a/resources/style.css
+++ b/resources/style.css
@@ -35,6 +35,39 @@ hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
 .-text-grey{color:#757575!important}
 
 
+
+hr{
+   margin-bottom: 50px;
+}
+
+header{
+   text-align:center;
+}
+
+.page-body{
+   width:80%; 
+   max-width: 1100px;
+   text-align:center;
+   margin: auto;
+}
+
+.video-div{
+   margin: 0 auto;
+   width: 100%;
+   height:auto;
+   text-align:center;
+}
+
+.ontop-of-video-p{
+   font-family:"Segoe UI",Arial,sans-serif;
+	z-index:1;
+	color: white;
+	font-size:4vw;
+	width:100%;
+	position: absolute;
+	text-align: center;
+}
+
 /* Flex Box contents */
 
 .flex-container {
@@ -98,7 +131,7 @@ hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
    cursor:pointer;
    white-space:nowrap;
    
-   font-size: 85%;
+   font-size: 90%;
 }
 
 
@@ -111,63 +144,51 @@ hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
    
    display:flex;
    justify-content: center;
-   flex-wrap: nowrap;
+   flex-wrap: wrap;
+   align-items: flex-start;
    width: 100%;
    padding:20px;
 }
 
 .my-contact-container, .my-pic-container{
    display:flex;
-
 }
 
 .my-pic-container{
-   margin-right: 10%;
-
+   margin-right: 5%;
+   vertical-align: top;
 }
+
 .my-contact-container{
    flex-wrap: wrap;
    flex-flow: column;
+   text-align: left;
+   /* padding-left: 15px; */
+   max-width: 500px;
+   min-width: 200px;
 
-   padding-left: 15px;
+   flex: 1 1 250px;
+
 }
+
+/* .my-contact-container h4{
+   text-align:center;
+} */
 
 .my-pic-img{
    flex: 1 1 100px;
    object-fit: contain;
-   align-self: center;
+   align-self: flex-start;
    /* width: 100%;
    height: auto; */
 }
 
 .contact-details{
-   /* text-align: left; */
    line-height:1.5;
 }
+
 /* ----------------------- */
 
-
-hr{
-   margin-bottom: 50px;
-}
-
-header{
-   text-align:center;
-}
-
-.page-body{
-   width:70%; 
-   text-align:center;
-   margin: auto;
-}
-
-.video-div{
-   margin: 0 auto;
-   width: 100%;
-   height:auto;
-   text-align:center;
-
-}
 
 
 /* Shutter In Vertical */
