--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -5,7 +5,7 @@ canvas,video{display:inline-block}[hidden]{display:none}
 
 
 dfn{font-style:italic}mark{background:#ff0;color:#000}
-small{font-size:80%}img{border-style:none}hr{box-sizing:content-box;height:0;overflow:visible}
+small{font-size:80%}hr{box-sizing:content-box;height:0;overflow:visible}
 button,input{font:inherit;margin:0}
 button,input{overflow:visible}button{text-transform:none}
 button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}
@@ -20,7 +20,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
 html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
-h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}
+h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h6{font-size:16px}
 h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
 .-image{max-width:100%;min-width:300px;height:auto}img{vertical-align:middle}a{color:inherit}:disabled *{pointer-events:none}
@@ -30,11 +30,17 @@ hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
 .-col{float:left;width:100%}
 @media (min-width:993px){.-col.l6{width:49.99999%;height: 400px;}}
 .-content{margin-left:auto;margin-right:auto}.-content{max-width:980px}
-@media (max-width:992px) and (min-width:601px){.-hide-medium{display:none!important}}.-round{border-radius:15px}@keyframes -spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}.-opacity-min{opacity:0.75}.-medium{font-size:15px!important}.-large{font-size:18px!important}.-center{text-align:center!important}.-padding-large{padding:12px 24px 40px 24px!important}
+@media (max-width:992px) and (min-width:601px){.-hide-medium{display:none!important}}.-round{border-radius:15px}@keyframes -spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}.-opacity-min{opacity:0.75}.-large{font-size:22px!important}.-center{text-align:center!important}.-padding-large{padding:12px 24px 40px 24px!important}
 .-padding-64{padding-top:64px!important;padding-bottom:64px!important}
 .-text-grey{color:#757575!important}
 
 
+
+.-medium,.-text-grey{font-size:22px!important}
+h5{font-size:26px}
+img{
+   border-radius:10px;
+}
 
 hr{
    margin-bottom: 50px;
@@ -42,6 +48,7 @@ hr{
 
 header{
    text-align:center;
+
 }
 
 .page-body{
@@ -74,6 +81,10 @@ header{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
+   align-items: center;
+ }
+
+ .-flex-start-align{
    align-items: flex-start;
  }
 
@@ -82,15 +93,20 @@ header{
    flex: 1 1 100px;
    background-color: white;
    margin: 10px;
-
-   min-width: 200px;
+   text-indent: 50px;
+   min-width: 300px;
  }
 
  .flex-pics{
+    /* height:500px; */
  }
 
  .flex-text{
    flex-direction: column;
+   padding: 0px 20px ;
+   background-color: #eeeeee;
+   border-radius: 12px;
+   text-align: left;
  }
 
 .flex-image{
