--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,3 +1,37 @@
+@font-face {
+    font-family: 'pnova-regular';
+    src: url('ProximaNova-Regular.otf');
+}
+
+@font-face {
+   font-family: 'pnova-light';
+   src: url('Proxima Nova Alt Light.otf');
+}
+
+@font-face {
+   font-family: 'pnova-bold';
+   src: url('Proxima Nova Bold.otf');
+}
+
+
+h4{
+   font-family:  pnova-regular;
+}
+
+h1,h2,h3{
+   font-family:  pnova-bold;
+   color: #444444;
+}
+
+html,h5,h6,p,body{
+   font-family:  pnova-light;
+}
+
+.ontop-of-video-p{
+   font-family:  pnova-regular;
+}
+
+
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 article,figcaption,header,main,menu,nav,section,#about-me{display:block}
@@ -19,9 +53,9 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}
 ::-webkit-input-placeholder{color:inherit;opacity:0.54}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
-html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
+html,body{font-size:15px;line-height:1.5}html{overflow-x:hidden}
 h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h6{font-size:16px}
-h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.-wide{letter-spacing:4px}
+h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}.-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
 .-image{max-width:100%;min-width:300px;height:auto}img{vertical-align:middle}a{color:inherit}:disabled *{pointer-events:none}
 .-display-container{position:relative}
@@ -33,6 +67,7 @@ hr{border:0;border-top:1px solid #cccccc;margin:20px 0}
 @media (max-width:992px) and (min-width:601px){.-hide-medium{display:none!important}}.-round{border-radius:15px}@keyframes -spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}.-opacity-min{opacity:0.75}.-large{font-size:22px!important}.-center{text-align:center!important}.-padding-large{padding:12px 24px 40px 24px!important}
 .-padding-64{padding-top:64px!important;padding-bottom:64px!important}
 .-text-grey{color:#757575!important}
+
 
 
 
@@ -65,14 +100,25 @@ header{
    text-align:center;
 }
 
-.ontop-of-video-p{
-   font-family:"Segoe UI",Arial,sans-serif;
+
+.ontop-of-video{
 	z-index:1;
 	color: white;
 	font-size:4vw;
 	width:100%;
 	position: absolute;
 	text-align: center;
+}
+
+ /* TRIANGLE arrow on top of video */
+ 
+ .triangle {
+width:4%;
+height: auto;
+}
+
+.triangle:hover {
+   cursor:pointer;
 }
 
 /* Flex Box contents */
@@ -93,8 +139,11 @@ header{
    flex: 1 1 100px;
    background-color: white;
    margin: 10px;
-   text-indent: 50px;
    min-width: 300px;
+ }
+
+ .flex-content p{
+   text-indent: 50px;
  }
 
  .flex-pics{
@@ -109,6 +158,10 @@ header{
    text-align: left;
  }
 
+ .flex-text h4{
+   text-align: center;
+ }
+
 .flex-image{
    width:100%;
    height:100%;
@@ -118,21 +171,19 @@ header{
 .top-bar{
    position: fixed;
    width: 100%;
-   height: 30px;
+   height: 35px;
    margin:  auto; /* Will not center vertically and won't work in IE6/7. */
    left: 0;
    right: 0;
    z-index: 10;
    background-color: white ;
-
    text-align: center;
-
 }
-
 
 .button_{
    height:100%;
-   width: 20%;
+   width: 25%;
+   max-width: 230px;
    
    /* padding:  10% 7% 5% 7%; */
    text-align:center;
@@ -143,11 +194,14 @@ header{
    border:none;
    overflow:hidden;
    text-decoration:none;
-   color:inherit;
    cursor:pointer;
    white-space:nowrap;
+
+   letter-spacing: 2px;
+   color:black;
+   font-family: pnova-bold;
    
-   font-size: 90%;
+   font-size: 100%;
 }
 
 
@@ -248,4 +302,20 @@ header{
    -webkit-transform: scaleY(0);
    transform: scaleY(0);
  }
+
+/* Triangle hang effect */
+.bounce {
+   animation: bounce 3s infinite;
+ }
  
+ @keyframes bounce {
+   0%, 20%, 50%, 80%, 100% {
+     transform: translateY(0);
+   }
+   40% {
+     transform: translateY(-20px);
+   }
+   60% {
+     transform: translateY(-10px);
+   }
+ }
