added my game engine section with small description and link to it

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -47,6 +47,14 @@ a{
    font-size: 1.3em;
 }
 
+
+.inline_links{
+
+   font-size: 1em;
+   color: #444444;
+   font-family:  pnova-regular, pnova-light;
+}
+
 .ontop-of-video-p{
    font-size:4vw;
    font-weight: 900;
