arrow ontop of video moved down a bit

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -142,7 +142,7 @@ header{
 .triangle-container{
 
    display: flex;
-   align-items: center;
+   align-items: flex-end;
    justify-content: center;
 
    width:10%;
